--- a/playbooks/roles/setup-tor/tasks/tor-config.yaml
+++ b/playbooks/roles/setup-tor/tasks/tor-config.yaml
@@ -10,7 +10,7 @@
     name: tor
     state: restarted
     daemon_reload: true
-  when: tor_force_restart or _config.changed or _binary.changed | default(false)
+  when: force_restart or _config.changed
 
 - name: Ensure Tor service is started
   ansible.builtin.service:
