--- a/playbooks/roles/setup/tasks/validate.yaml
+++ b/playbooks/roles/setup/tasks/validate.yaml
@@ -15,18 +15,18 @@
       - "metrics_port is defined"
       - "prometheus_server is ansible.utils.ipv4"
 
-- name: Validate kernel_repo
-  when: kernel_repo != ""
+- name: Validate kernel_debian_repo
+  when: kernel_debian_repo != ""
   ansible.builtin.assert:
     quiet: true
     that:
-      - "kernel_version is defined"
-      - 'kernel_version != ""'
+      - "kernel_debian_version is defined"
+      - 'kernel_debian_version != ""'
 
-- name: Validate kernel_version
-  when: kernel_version != ""
+- name: Validate kernel_debian_version
+  when: kernel_debian_version != ""
   ansible.builtin.assert:
     quiet: true
     that:
-      - "kernel_repo is defined"
-      - 'kernel_repo != ""'
+      - "kernel_debian_repo is defined"
+      - 'kernel_debian_repo != ""'
