new: build linux kernel from git source

--- a/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
+++ b/playbooks/roles/setup-snowflake/tasks/snowflake.yaml
@@ -11,7 +11,7 @@
     group: snowflake
     mode: "0700"
 
-- name: Prepare snowflake repo
+- name: Init or update repo
   become: true
   become_user: snowflake
   ansible.builtin.git:
