--- a/playbooks/roles/setup-tor/tasks/tools.yaml
+++ b/playbooks/roles/setup-tor/tasks/tools.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Install or update base software
+- name: Install or update toolchain for Tor build
   ansible.builtin.apt:
     name:
       - git
@@ -9,7 +9,7 @@
     filename: "backports"
     repo: "deb http://deb.debian.org/debian {{ ansible_facts.distribution_release }}-backports main"
 
-- name: Install or update Go
+- name: Install or update Go for Tor build
   ansible.builtin.apt:
     default_release: "{{ ansible_facts.distribution_release }}-backports"
     name:
