when: not ansible_check_mode

--- a/playbooks/roles/info-snowflake/tasks/connections.yaml
+++ b/playbooks/roles/info-snowflake/tasks/connections.yaml
@@ -9,6 +9,7 @@
   register: _result
 
 - name: File connections
+  when: not ansible_check_mode
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
