--- a/playbooks/roles/setup/tasks/firewall.yaml
+++ b/playbooks/roles/setup/tasks/firewall.yaml
@@ -1,5 +1,6 @@
 ---
 - name: Install or update firewall packages
+  when: not ansible_check_mode
   ansible.builtin.apt:
     name:
       - conntrack
