--- a/playbooks/roles/info-tor/tasks/bto.yaml
+++ b/playbooks/roles/info-tor/tasks/bto.yaml
@@ -1,5 +1,6 @@
 ---
 - name: Query bto
+  when: not ansible_check_mode
   ansible.builtin.uri:
     url: "https://bridges.torproject.org/status?id={{ _hashed_fingerprint }}"
     return_content: yes
@@ -7,6 +8,7 @@
   register: _result
 
 - name: File bto
+  when: not ansible_check_mode and _result.status == 200
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
@@ -14,4 +16,3 @@
     line: "{{ inventory_hostname }} {{ _result.content | split('\n') | select('search', 'functional') | first | default('n/a n/a n/a') }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_bto"
     regex: "^{{ inventory_hostname }} "
-  when: _result.status == 200
