--- a/playbooks/roles/info-tor/tasks/hashed-fingerprint.yaml
+++ b/playbooks/roles/info-tor/tasks/hashed-fingerprint.yaml
@@ -5,5 +5,6 @@
   register: _result
 
 - name: Set fact
+  when: not ansible_check_mode
   ansible.builtin.set_fact:
     _hashed_fingerprint: "{{ _result.stdout_lines[0] }}"
