--- a/playbooks/roles/info-tor/tasks/onionoo.yaml
+++ b/playbooks/roles/info-tor/tasks/onionoo.yaml
@@ -1,5 +1,6 @@
 ---
 - name: Query Onionoo
+  when: not ansible_check_mode
   ansible.builtin.uri:
     url: "https://onionoo.torproject.org/details?search={{ _hashed_fingerprint }}"
     return_content: yes
@@ -7,6 +8,7 @@
   register: _result
 
 - name: File onionoo
+  when: not ansible_check_mode and _result.status == 200
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
@@ -18,4 +20,3 @@
       blocklist: {{ _result.json.bridges[0].blocklist | default([]) | join(',') }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_onionoo"
     regex: "^{{ inventory_hostname }} "
-  when: _result.status == 200
