--- a/playbooks/roles/info-tor/tasks/uptime.yaml
+++ b/playbooks/roles/info-tor/tasks/uptime.yaml
@@ -11,6 +11,7 @@
   failed_when: (_result.stdout_lines | length != 1) or (_result.stderr_lines | length > 0)
 
 - name: File uptime
+  when: not ansible_check_mode
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
