--- a/playbooks/roles/setup-tor/tasks/tor-git.yaml
+++ b/playbooks/roles/setup-tor/tasks/tor-git.yaml
@@ -1,5 +1,6 @@
 ---
 - name: Install or update toolchain for Tor build
+  when: not ansible_check_mode
   ansible.builtin.apt:
     name:
       - automake
@@ -20,7 +21,8 @@
     group: tor
     mode: "0700"
 
-- name: Init or update repo
+- name: Init or update repo of Tor
+  when: not ansible_check_mode
   ansible.builtin.git:
     repo: https://gitlab.torproject.org/tpo/core/tor.git/
     dest: /root/tor
@@ -52,6 +54,7 @@
 
 # test if Tor service needs a restart
 - name: Copy Tor binary
+  when: not ansible_check_mode
   ansible.builtin.copy:
     src: /root/tor/src/app/tor
     dest: /usr/bin/
