--- a/playbooks/roles/setup/tasks/kernel-git.yaml
+++ b/playbooks/roles/setup/tasks/kernel-git.yaml
@@ -1,5 +1,6 @@
 ---
-- name: Install or update toolchain
+- name: Install or update toolchain for kernel build
+  when: not ansible_check_mode
   ansible.builtin.apt:
     name:
       - bc
@@ -34,7 +35,8 @@
     chdir: "/root"
     creates: "{{ kernel_git_repo_dir }}"
 
-- name: Init or update linux repo
+- name: Init or update repo of linux
+  when: not ansible_check_mode
   ansible.builtin.git:
     repo: "{{ kernel_git_repo }}"
     dest: "{{ kernel_git_repo_dir }}"
@@ -42,6 +44,7 @@
     force: true
 
 - name: "Create or update src for {{ kernel_git_revision }}"
+  when: not ansible_check_mode
   ansible.builtin.shell:
     cmd: |
       git archive "{{ kernel_git_revision }}" --prefix linux-"{{ kernel_git_revision }}/" |
@@ -59,6 +62,7 @@
   loop: "{{ kernel_git_patches }}"
 
 - name: "Build kernel {{ kernel_git_revision }}"
+  when: not ansible_check_mode
   ansible.builtin.shell:
     cmd: |
       set -e
