--- a/playbooks/roles/setup/tasks/metrics.yaml
+++ b/playbooks/roles/setup/tasks/metrics.yaml
@@ -1,5 +1,6 @@
 ---
 - name: Install or update Nginx
+  when: not ansible_check_mode
   ansible.builtin.apt:
     name:
       - nginx
@@ -32,7 +33,7 @@
   register: _configfile
 
 - name: Restart Nginx
-  when: _installed.changed or _cert.changed or _configfile.changed
+  when: not ansible_check_mode and (_installed.changed or _cert.changed or _configfile.changed)
   ansible.builtin.service:
     name: nginx
     state: restarted
