do not reset firewall for --tags setup

--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -50,6 +50,7 @@
     - name: Firewall
       ansible.builtin.import_tasks: firewall.yaml
       tags:
+        - never
         - firewall
 
     - name: Prometheus node exporter
