--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -28,6 +28,7 @@
     - log-unattended
 
 - name: Metrics port
+  when: metrics_port is defined and metrics_port != ""
   ansible.builtin.import_tasks: metrics.yaml
   tags:
     - metrics
