--- a/playbooks/roles/setup-tor/tasks/tor-git.yaml
+++ b/playbooks/roles/setup-tor/tasks/tor-git.yaml
@@ -89,7 +89,7 @@
     src: tor.service
     dest: /etc/systemd/system/
 
-- name: Set sysctl value
+- name: Set sysctl max user namespaces
   ansible.posix.sysctl:
     name: user.max_user_namespaces
     value: "2" # debian bookworm default: 14886
