--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -5,6 +5,15 @@
     state: directory
     mode: "0700"
 
+- name: Deactivate ssh login via password
+  ansible.builtin.shell:
+    cmd: |
+      if grep -q "^PermitRootLogin yes" /etc/ssh/sshd_config; then
+        sed -i -e 's,^PermitRootLogin yes,#PermitRootLogin yes,' /etc/ssh/sshd_config
+        service sshd restart
+        sleep 5
+      fi
+
 - name: Upgrade distribution
   ansible.builtin.apt:
     upgrade: dist
@@ -14,11 +23,14 @@
   ansible.builtin.apt:
     name:
       - apt-transport-https
+      - conntrack
       - cron
       - gpg
       - gpg-agent
       - htop
-      - net-tools
+      - iptables
+      - iptables-persistent
+      #- net-tools
       - ntp
       - psmisc
       - unattended-upgrades
