partly restore 52ee2aa7c4b55b, only DNAT of udb v6 breaks DHCPv6 at ionos

--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -6,6 +6,7 @@
     mode: "0700"
 
 - name: Deactivate ssh login via password
+  changed_when: false
   ansible.builtin.shell:
     cmd: |
       if grep -q "^PermitRootLogin yes" /etc/ssh/sshd_config; then
