--- a/playbooks/roles/setup/tasks/firewall.yaml
+++ b/playbooks/roles/setup/tasks/firewall.yaml
@@ -1,4 +1,8 @@
 ---
+- name: Gather facts for firewall
+  ansible.builtin.setup:
+    gather_subset: "{{ facts_subset }}"
+
 - name: Create firewall script
   ansible.builtin.template:
     src: "{{ 'firewall-ip' + item + '.sh.j2' }}"
@@ -16,6 +20,7 @@
     - "v6"
 
 - name: Prereoute incoming ipv6 traffic
+  when: ansible_facts.bios_vendor == 'Hetzner'
   module_defaults:
     ansible.builtin.iptables:
       ip_version: ipv6
@@ -31,23 +36,23 @@
         flush: yes
 
     - name: DNAT TCP v6 except obfs4 port
-      when: obfs4_port is defined
+      vars:
+        _ports: '{{ (obfs4_port is defined) | ternary("1:" ~ (obfs4_port | int - 1) ~ "," ~ (obfs4_port | int  + 1) ~ ":65535", "1:65535") }}'
       ansible.builtin.iptables:
         protocol: tcp
-        destination_ports: "1:{{ obfs4_port | int - 1 }},{{ obfs4_port | int  + 1 }}:65535"
+        destination_ports: "{{ _ports }}"
 
-    - name: DNAT TCP v6
-      when: obfs4_port is not defined
-      ansible.builtin.iptables:
-        protocol: tcp
-
-    # no udp, at ionos the DHCPv6 is broken
     - name: DNAT non-TCP v6
       ansible.builtin.iptables:
         protocol: "{{ item }}"
       with_items:
         - ipv6-icmp
+        - udp
         - udplite
+  rescue:
+    - name: Print when errors
+      ansible.builtin.debug:
+        msg: "Prereoute failed"
 
 - name: Save iptables state
   community.general.iptables_state:
