--- a/playbooks/roles/setup/tasks/ipv6.yaml
+++ b/playbooks/roles/setup/tasks/ipv6.yaml
@@ -3,16 +3,6 @@
 # solution: set the default IPv6 address (<prefix>::1) to an arbitrarily choosen value
 #           and re-route incoming ipv6 traffic to it (exception: the destination port is the obfs4 port)
 
-- name: Gather facts for ipv6
-  ansible.builtin.setup:
-    gather_subset: "{{ facts_subset }}"
-
-- name: Validate public available ipv6
-  ansible.builtin.assert:
-    quiet: true
-    that:
-      - "ansible_facts.default_ipv6.address is defined"
-
 - name: Configure new ipv6 address
   vars:
     _ipv6_prefix: "{{ (ansible_facts.default_ipv6.address | split(':'))[:4] | join(':') }}"
@@ -32,7 +22,6 @@
     state: restarted
     daemon_reload: true
     enabled: true
-  register: _service
   when: _cloud_init.changed
 
 - name: Deactivate the Hetzner network configurator
@@ -46,6 +35,13 @@
   register: _result
   failed_when: _result.stderr_lines | length > 0
 
-- name: Gather facts
+- name: Gather facts again
+  when: _cloud_init.changed
   ansible.builtin.setup:
     gather_subset: "{{ facts_subset }}"
+
+- name: Bail out
+  when: ansible_facts.default_ipv6.address is match('fe80::')
+  failed_when: ansible_facts.default_ipv6.address is match('fe80::')
+  ansible.builtin.debug:
+    var: _result.stdout_lines
