--- a/playbooks/roles/setup/tasks/ipv6-hetzner.yaml
+++ b/playbooks/roles/setup/tasks/ipv6-hetzner.yaml
@@ -1,8 +1,6 @@
 ---
-# goal:     enlarge the cost of a network scanner for an IPv6 scan of e.g. the obfs4 port
-# solution: set the default IPv6 address (<prefix>::1) to an arbitrarily choosen value
-
-- name: Configure new ipv6 address
+- name: Generate a pseudo.randomly choosen ipv6 address
+  failed_when: ansible_facts.default_ipv6.prefix != "64"
   vars:
     _ipv6_prefix: "{{ (ansible_facts.default_ipv6.address | split(':'))[:4] | join(':') }}"
     _a: "{{ range(0, 65535) | random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'A' + _ipv6_prefix) }}"
