deactivate password based login

--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -5,15 +5,22 @@
     state: directory
     mode: "0700"
 
-- name: Deactivate ssh login via password
-  changed_when: false
+- name: check for ionos init file
+  ansible.builtin.stat:
+    path: /etc/ssh/sshd_config.d/50-cloud-init.conf
+  register: _cloud_init
+
+- name: de-activate password + root login (ionos)
+  when: _cloud_init.stat.exists
   ansible.builtin.shell:
     cmd: |
+      rm /etc/ssh/sshd_config.d/50-cloud-init.conf
+
       if grep -q "^PermitRootLogin yes" /etc/ssh/sshd_config; then
         sed -i -e 's,^PermitRootLogin yes,#PermitRootLogin yes,' /etc/ssh/sshd_config
-        service sshd restart
-        sleep 5
       fi
+
+      service sshd reload
 
 - name: Upgrade distribution
   ansible.builtin.apt:
