--- a/playbooks/roles/setup-tor/tasks/tor-debian.yaml
+++ b/playbooks/roles/setup-tor/tasks/tor-debian.yaml
@@ -10,35 +10,6 @@
     repo: "deb https://deb.torproject.org/torproject.org {{ ansible_facts.distribution_release }} main"
     state: present
 
-# https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1021911
-- name: Obfs4 port
-  when: obfs4_port is defined and (obfs4_port | int < 1024)
-  block:
-    # Hint: in case of a remove the hooks have to be removed before obfs4proxy
-    - name: Debian Configure apt hook for obfs4proxy
-      ansible.builtin.lineinfile:
-        line: 'DPkg::Post-Invoke { "setcap cap_net_bind_service=+ep /usr/bin/obfs4proxy"; };'
-        path: /etc/apt/apt.conf.d/99-obfs4proxy-capability
-        create: yes
-
-    - name: Configure dpkg hook for obfs4proxy to use privileged port
-      ansible.builtin.lineinfile:
-        line: "post-invoke=setcap cap_net_bind_service=+ep /usr/bin/obfs4proxy"
-        path: /etc/dpkg/dpkg.cfg.d/obfs4proxy-capability
-        create: yes
-
-    - name: Create dir to configure Tor to use privileged port
-      ansible.builtin.file:
-        state: directory
-        path: /etc/systemd/system/tor@default.service.d
-        recurse: yes
-        mode: "0755"
-
-    - name: Configure Tor to use privileged port
-      ansible.builtin.copy:
-        src: override_tor_service.conf
-        dest: /etc/systemd/system/tor@default.service.d/override.conf
-
 - name: Install or update Tor
   when: not ansible_check_mode
   ansible.builtin.apt:
@@ -60,3 +31,20 @@
   when: _binary.changed
   ansible.builtin.set_fact:
     force_restart: true
+
+# https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1021911
+- name: Obfs4 port
+  when: obfs4_port | int < 1024
+  block:
+    # Hint: to remove these hooks the obfs4proxy has to be removed before
+    - name: Debian Configure apt hook for obfs4proxy
+      ansible.builtin.lineinfile:
+        line: 'DPkg::Post-Invoke { "setcap cap_net_bind_service=+ep /usr/bin/obfs4proxy"; };'
+        path: /etc/apt/apt.conf.d/99-obfs4proxy-capability
+        create: yes
+
+    - name: Configure dpkg hook for obfs4proxy to use privileged port
+      ansible.builtin.lineinfile:
+        line: "post-invoke=setcap cap_net_bind_service=+ep /usr/bin/obfs4proxy"
+        path: /etc/dpkg/dpkg.cfg.d/obfs4proxy-capability
+        create: yes
