--- a/playbooks/roles/setup/tasks/metrics.yaml
+++ b/playbooks/roles/setup/tasks/metrics.yaml
@@ -4,7 +4,6 @@
   ansible.builtin.apt:
     name:
       - nginx
-  register: _installed
 
 - name: Check if key file does exist
   ansible.builtin.stat:
@@ -23,17 +22,20 @@
       -keyout /etc/ssl/private/nginx-selfsigned-metrics.key \
       -out /etc/ssl/certs/nginx-selfsigned-metrics.crt \
       -subj "/C=/O=/OU=/CN="
-  register: _cert
 
 - name: Configure Nginx
   ansible.builtin.template:
     src: metrics.conf.j2
     dest: /etc/nginx/conf.d/metrics.conf
     mode: "0644"
-  register: _configfile
+
+- name: Remove Nginx default listener
+  ansible.builtin.file:
+    path: /etc/nginx/sites-enabled/default
+    state: absent
 
 - name: Restart Nginx
-  when: not ansible_check_mode and (_installed.changed or _cert.changed or _configfile.changed)
+  when: not ansible_check_mode
   ansible.builtin.service:
     name: nginx
     state: restarted
