--- a/playbooks/roles/setup-tor/tasks/main.yaml
+++ b/playbooks/roles/setup-tor/tasks/main.yaml
@@ -58,7 +58,7 @@
       tags:
         - lyrebird
 
-    - name: Git
-      ansible.builtin.import_tasks: tor-config.yaml
+    - name: Config
+      ansible.builtin.import_tasks: config.yaml
       tags:
-        - tor-config
+        - config
