--- a/playbooks/roles/setup-tor/tasks/lyrebird.yaml
+++ b/playbooks/roles/setup-tor/tasks/lyrebird.yaml
@@ -21,7 +21,7 @@
     cmd: go build ./cmd/lyrebird
     chdir: /root/lyrebird
 
-- name: Copy Lyrebird
+- name: Install Lyrebird
   when: not ansible_check_mode
   ansible.builtin.copy:
     src: /root/lyrebird/lyrebird
@@ -30,6 +30,11 @@
     remote_src: yes
   register: _plugin
 
+- name: Set fact
+  when: _plugin.changed
+  ansible.builtin.set_fact:
+    force_restart: true
+
 # for systemd see CapabilityBoundingSet, NoNewPrivileges, PrivateDevices and probably more
 - name: Set Linux capabilities on Lyrebird
   community.general.capabilities:
@@ -37,8 +42,3 @@
     capability: cap_net_bind_service=+ep
     state: present
   when: _plugin.changed
-
-- name: Set fact
-  when: _plugin.changed
-  ansible.builtin.set_fact:
-    force_restart: true
