--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -8,7 +8,7 @@
 - name: Validate
   ansible.builtin.import_tasks: validate.yaml
   tags:
-    - always
+    - validate
 
 - name: Main
   module_defaults:
