--- a/playbooks/roles/setup-tor/tasks/main.yaml
+++ b/playbooks/roles/setup-tor/tasks/main.yaml
@@ -2,7 +2,7 @@
 - name: Validate
   ansible.builtin.import_tasks: validate.yaml
   tags:
-    - always
+    - validate
 
 - name: Main
   module_defaults:
